# wasmer-python-memory-leak

./: README.md  hello.go  hello.wasm  pyproject.toml  script.py
