[tool.poetry]
name = "wasmer-python-memory-leak"
version = "0.1.0"
description = ""
authors = ["Julian Arz <j.arz@web.de>"]
readme = "README.md"
packages = [{include = "wasmer_python_memory_leak"}]

[tool.poetry.dependencies]
python = "3.10"
wasmer = "^1.1.0"
wasmer-compiler-cranelift = "^1.1.0"
psutil = "^5.9.4"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
